# jamdr

./: Cargo.toml  README.md  README_TEST.md  School.md  perf.data  perf.data.old  template.html  test.md  test_simple.md  tmp.html
assets/templates/: template.html
src/: cli.rs  config.rs  io.rs  lexer.rs  main.rs  parser.rs  render.rs
