[package]
name = "jamdr"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = "0.18.0"
clap = {version = "4.4.6", features = ["derive"]}
figment = {version = "0.10.10", features = ["toml"]}
serde = {version = "1.0.188", features = ["derive"]}
toml = "0.8.1"
glob = "0.3.1"
handlebars = "4.4.0"
serde_json = "1.0.107"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
dirs = "5.0.1"
